--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ data/raw/*
 data/interim/*
 data/processed/*
 !data/.gitkeep
-models/*
-!models/.gitkeep
+#models/*
+#!models/.gitkeep
 reports/figures/*
 
 # Envs
